# seahorse

./: .clang-format  .gitignore  CMakeLists.txt  CMakelists.txt  Chars.h  Malloc.h  README.md  Thread.h  Utils.h  build.sh
cpp_test/: Chars_test.cc  Filesystem_test.cc  const.cc  constructor_call_constructor.cc  initialize_list.cc  sprintf_pointer_value.cc  unique_ptr_stack_object_life_cycle.cc
src/: Chars.cc  Chars.h  Filesystem.cc  Filesystem.h  Thread.cc  Utils.h
src/algorithm/sort/: Sort.cc  search.h  sort.h
src/base/: Chars.cc  Chars.h  Filesystem.cc  Filesystem.h  Thread.h  Utils.h  buffer.h  chars.cc  chars.h  file.cc  file.h  log.cc  log.h  malloc.h  thread.cc  thread.h  utils.h
src/network/: socket.h
src/unix-like/linux/: Inotify.cc  Inotify.h
